--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,75 @@
 .App {
-  text-align: center;
+  width: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: black;
+}
+
+.logo {
+  height: 50px;
+  width: 50px;
+  overflow: hidden;
+  margin: 5px 10px;
+}
+
+.logo img {
+  width: 100%;
+}
+
+.appname {
   color: white;
+  font-size: 18px;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+table tbody tr td img {
+  border-radius: 10px;
+  max-width: 150px;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table {}
+
+table {
+  /* width: 100%; */
+  /* overflow: hidden; */
+}
+
+table tbody tr td p {
+  padding-right: 10px;
+  margin-top: 5px;
+  font-size: 18px;
+}
+
+table tbody tr td {
+  vertical-align: top;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #999999;
+}
+
+h3 {
+  font-size: 22px;
+  padding-bottom: 0px;
+  margin-bottom: 0;
+}
+
+input[type="button"] {
+  background: darkslategrey;
+  color: #fff;
+  border: none;
+  padding: 7px 15px;
+}
+
+.search-label {
+  font-size: 18px;
+  color: limegreen;
+  font-style: italic;
+  padding: 10px;
+  font-weight: bold;
+}
+.no-result {
+  padding: 10px;
 }
